fix(ui5-flexible-column-layout): collumn visibility issue fixed

--- a/packages/fiori/src/themes/FlexibleColumnLayout.css
+++ b/packages/fiori/src/themes/FlexibleColumnLayout.css
@@ -17,7 +17,6 @@
 	box-sizing: border-box;
 	will-change: width;
 	overflow-y: auto;
-	min-width: 15.5rem; /* as noted in our documentation */
 }
 
 /* disable pointer events on columns while dragging the separator
@@ -28,6 +27,10 @@
 
 .ui5-fcl-column-animation {
 	transition: width 560ms cubic-bezier(0.1, 0, 0.05, 1), visibility 560ms ease-in;
+}
+
+.ui5-fcl-column:not(.ui5-fcl-column-collapsing) {
+	min-width: 15.5rem; /* as noted in our documentation */
 }
 
 .ui5-fcl-column--hidden {
